[package]
name = "mem-hack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mem_hack"
path = "src/mem_hack.rs"
 
[dependencies]
winapi = { version = "0.3", features = ["winuser","libloaderapi","sysinfoapi","tlhelp32","memoryapi","handleapi","psapi","processthreadsapi"] }
sysinfo = { version = "0.29", default-features = false }
